fixed spacing

--- a/staticfilesoutput/Homepage/styles.css
+++ b/staticfilesoutput/Homepage/styles.css
@@ -325,11 +325,12 @@ h1 a {
   bottom: 0;
   z-index: 999; */
   padding: 10px 20px;
+  margin: 0 0.2rem;
   color: black;
-  width: fit-content;
+
   background-color: white;
   border-radius: 15px;
-  margin: 0 10px;
+  /* margin: 0 0.2rem; */
 }
 
 .uid-text-male,
